[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/dist",
  "/notebooks",
  "/scripts",
  "/bin",
  "/tests",
]

[project]
name = "monthly-meteo-composite"
version = "0.0.1a1"
authors = [
  { name="Vincent Verelst" },
]
description = "Generate monthly composites for AgERA5"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "openeo==0.42.0",
]

[project.urls]
"Homepage" = "https://github.com/VincentVerelst/monthly-meteo-composite"
"Bug Tracker" = "https://github.com/VincentVerelst/monthly-meteo-composite/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "requests-mock>=1.8.0",
  "pre-commit",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = [
  "--verbose",
  "--import-mode=prepend",
  "--log-cli-level=INFO",
  "--timeout=900",
]
junit_logging = "log"  # Include logging output in JUnit XML report


[tool.isort]
profile = "black"


[tool.black]
line-length = 88


[tool.ruff]
# line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501",  # Ignore "line-too-long" issues, let black handle that.
]

